# intel_amx_example

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: int8mmamx.cpp  matrix_mul_amx.cpp  matrix_mul_amx_with_policy.cpp  matrix_mul_amx_with_policy_2.cpp  matrix_mul_amx_with_policy_3.cpp  matrix_mul_amx_with_policy_v1.cpp  matrix_mul_amx_with_policy_v2.cpp  matrix_mul_amx_with_policy_v3.cpp  matrix_mul_amx_with_policy_v4.cpp  matrix_mul_amx_with_policy_v5.cpp
